<resources>
    <string name="app_name">Loof Meals</string>
    <string name="menu">Menu</string>
    <string name="about">Over</string>
    <string name="favorites">Favorieten</string>
    <string name="detail">Detail</string>
    <string name="overview">Overzicht</string>
    <string name="restaurants_get_error">Restaurants konden niet worden opgehaald</string>
    <string name="restaurant_get_error">Restaurant kon niet worden opgehaald</string>
    <string name="search_bar_label">Naam, Gemeente, Postcode…</string>
    <string name="search_bar_description">Zoeken</string>
    <string name="search_bar_clear_description">Clear</string>
    <string name="welcome">Welkom bij Loof Meals</string>
    <string name="description">Ontdek toegankelijke restaurants in Vlaanderen &amp; Brussel met mijn app, Loof Meals. Ik gebruik overheid data om jou te helpen bij het vinden van eetgelegenheden die geschikt zijn voor mensen met mobiliteitsbeperkingen, auditievestoornissen en meer.</string>
    <string name="why">Waarom Loof Meals?</string>
    <string name="for_everyone">Toegankelijkheid voor iedereen</string>
    <string name="simple">Eenvoudig en doeltreffend</string>
    <string name="contact_me">Contacteer mij</string>
    <string name="email">roy.barneveld1@gmail.com</string>
    <string name="thank_you">Bedankt voor het gebruik van Loof Meals.</string>
    <string name="enjoy">Geniet van je maaltijd!</string>
    <string name="subject">Onderwerp</string>
    <string name="accesibility">Toegankelijkheid</string>
    <string name="link_to_accessibility_website">Link naar toegankelijkheids website</string>
    <string name="no_description">Geen Beschrijving</string>
    <string name="no_accessibility">Geen toegankelijkheids beschrijving</string>
    <string name="no_link">Geen toegankelijkheids link</string>
    <string name="route">Route</string>
    <string name="no_route">Geen interne route</string>
    <string name="facilities">Faciliteiten</string>
    <string name="no_facilities">Geen extra faciliteiten</string>
    <string name="no_name">Geen naam</string>
    <string name="no_city">Geen stads naam</string>
    <string name="map">Map</string>
    <string name="map_no_permission">Toestemming niet verleend. Geef de locatie toestemming om door te gaan</string>
    <string name="map_no_location">Er is geen locatietoestemming gekozen</string>
    <string name="favorites_get_error">Favorieten konden niet worden opgehaald</string>
    <string name="favorites_empty">Je favorietenlijst is zo leeg als een bord na een smakelijk diner! Vul het met wat restaurants uit het</string>
    <string name="contact">Contact</string>
    <string name="no_address">Geen address</string>
    <string name="no_phone">Geen telefoonnummer</string>
    <string name="no_email">Geen e-mailadres</string>
    <string name="no_website">Geen website</string>
    <string name="network_error">Geen netwerk</string>
    <string name="map_error">Fout bij ophalen van locaties, probeer later opnieuw</string>
</resources>