...

    Box(
        modifier = Modifier.fillMaxSize()
    ) {
        Image(
            painter = painterResource(id = R.drawable.background4),
            contentDescription = "background4",
            contentScale = ContentScale.FillWidth,
            modifier = Modifier.matchParentSize()
        )
        when (favoriteApiState) {
            is Loading -> {
                Row(
...
    LazyColumn(
        state = lazyListState, modifier = modifier.padding(
            horizontal = dimensionResource(R.dimen.md),
        )
    ) {
        items(favoriteState.restaurants) { restaurant ->
            RestaurantCard(restaurant = restaurant,
                onClick = { goToDetail(restaurant.id) },
                onIconClick = { favoriteViewModel.updateFavorite(restaurant) })
        }
    }
}
