...

        Box(
            modifier = Modifier.fillMaxSize()
        ) {
            Image(
                painter = painterResource(id = R.drawable.background5),
                contentDescription = "background5",
                contentScale = ContentScale.FillWidth,
                modifier = Modifier.matchParentSize()
            )
            when (mapApiState) {
                is Loading -> {
                    Row(
...
private fun NoPermContent(background: Painter, text: String) {
    Box(
        modifier = Modifier.fillMaxSize()
    ) {
        Image(
            painter = background,
            contentDescription = "background1",
            contentScale = ContentScale.FillWidth,
            modifier = Modifier.matchParentSize()
        )
        Box(
            contentAlignment = Alignment.Center,
            modifier = Modifier
...
