...
        modifier = Modifier
            .fillMaxSize(),
        Alignment.Center
    ) {
        Image(
            painter = painterResource(id = R.drawable.background3),
            contentDescription = "background3",
            contentScale = ContentScale.FillWidth,
            modifier = Modifier.matchParentSize()
        )
        Box(modifier = Modifier.padding(dimensionResource(R.dimen.lg))) {
            BackgroundSurface(shape = MaterialTheme.shapes.medium) {
                Column(
...
